--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "start": "node index.js ",
+    "test": "mocha --require esm"
   },
   "type": "module",
   "repository": {
@@ -19,9 +20,12 @@
   },
   "homepage": "https://github.com/Laaaaannn/chocolate-vending-machine#readme",
   "dependencies": {
+    "chalk": "^5.0.1",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "esm": "^3.2.25",
     "mocha": "^10.0.0"
   }
 }
